[gd_scene load_steps=7 format=3 uid="uid://do7cudkhqty4j"]

[ext_resource type="Script" path="res://Scripts/Unit.gd" id="1_0uedf"]
[ext_resource type="Texture2D" uid="uid://6fmf6y5gpeyd" path="res://Sprites/icon.svg" id="2_lseq5"]
[ext_resource type="Script" path="res://Scripts/DragDrop.gd" id="3_cm8xk"]
[ext_resource type="Script" path="res://Scripts/UnitUI.gd" id="4_fm5r1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jidj6"]
size = Vector2(127.5, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_710he"]
radius = 3.0

[node name="Unit" type="Area2D"]
z_index = 5
collision_layer = 2
collision_mask = 2
script = ExtResource("1_0uedf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_lseq5")
centered = false

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_jidj6")

[node name="DragLine" type="Polygon2D" parent="."]
visible = false
z_index = 1
z_as_relative = false
position = Vector2(63, 64)
antialiased = true
polygon = PackedVector2Array(0, 1, 0, -1, 2, -1, 2, 1)
script = ExtResource("3_cm8xk")
metadata/_edit_group_ = true

[node name="DropArea" type="Area2D" parent="DragLine"]
collision_mask = 3

[node name="DropCollision" type="CollisionShape2D" parent="DragLine/DropArea"]
shape = SubResource("CircleShape2D_710he")
debug_color = Color(1, 0.00392157, 0.0745098, 0.419608)

[node name="UnitUI" type="Node2D" parent="."]
script = ExtResource("4_fm5r1")

[node name="Label" type="Label" parent="UnitUI"]
offset_left = 28.0
offset_top = 24.0
offset_right = 104.0
offset_bottom = 98.0

[node name="InactiveFilter" type="Polygon2D" parent="UnitUI"]
position = Vector2(64, 64)
color = Color(0.164706, 0.164706, 0.164706, 0.501961)
polygon = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)

[connection signal="activity_timer_set" from="." to="UnitUI" method="_on_unit_activity_timer_set"]
[connection signal="mouse_entered" from="." to="DragLine" method="_on_unit_mouse_entered"]
[connection signal="mouse_exited" from="." to="DragLine" method="_on_unit_mouse_exited"]
[connection signal="area_entered" from="DragLine/DropArea" to="DragLine" method="_on_drop_area_entered"]
[connection signal="area_exited" from="DragLine/DropArea" to="DragLine" method="_on_drop_area_exited"]
